// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderSectionItem border defaults to left 1`] = `
<div
  class="kuiHeaderSectionItem"
/>
`;

exports[`EuiHeaderSectionItem border renders right 1`] = `
<div
  class="kuiHeaderSectionItem kuiHeaderSectionItem--borderRight"
/>
`;

exports[`EuiHeaderSectionItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="kuiHeaderSectionItem testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
